put links into the icons

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -50,7 +50,9 @@
           diseñar y editar el contenido de una página web.
         </p>
         <div class="icons iconsleft">
-          <i class="fab fa-twitter"> · </i>
+          <a href="https://twitter.com/adalab_digital?lang=es">
+            <i class="fab fa-twitter"> · </i></a
+          >
 
           <a href="https://github.com/MaitaneAbad">
             <i class="fab fa-github-alt" title="Github Maitane"> · </i></a
@@ -76,7 +78,9 @@
           nuestra filosofía de trabajo.
         </p>
         <div class="icons iconsright">
-          <i class="fab fa-twitter"> · </i>
+          <a href="https://twitter.com/adalab_digital?lang=es">
+            <i class="fab fa-twitter"> · </i></a
+          >
           <a href="https://github.com/dunayari"
             ><i class="fab fa-github-alt" title="Github Ana"> · </i></a
           >
@@ -106,7 +110,9 @@
         </p>
 
         <div class="icons iconsleft">
-          <i class="fab fa-twitter"> · </i>
+          <a href="https://twitter.com/adalab_digital?lang=es"
+            ><i class="fab fa-twitter"> · </i></a
+          >
           <a href="https://github.com/PalomaLozano"
             ><i class="fab fa-github-alt" title="Github Paloma"> · </i></a
           >
@@ -131,7 +137,9 @@
         </p>
 
         <div class="icons iconsright">
-          <i class="fab fa-twitter"> · </i>
+          <a href="https://twitter.com/adalab_digital?lang=es"
+            ><i class="fab fa-twitter"> · </i></a
+          >
           <a href="https://github.com/IreGonzalez"
             ><i class="fab fa-github-alt" title="Github Irene"> · </i></a
           >
